Zodiac signs are now opt-in

--- a/src/main/resources/i18n/messages_cz.properties
+++ b/src/main/resources/i18n/messages_cz.properties
@@ -64,6 +64,7 @@ logout=Odhlášení
 message=Zpráva
 
 new-password=Nové heslo
+no=Ne
 no-users-found=Nebyli nalezeni žádní uživatelé
 
 or=Nebo
@@ -88,6 +89,8 @@ tos=Podmínky služby
 units=Jednotky
 
 website=Web
+
+yes=Ano
 
 # TEMPLATE #
 
@@ -195,6 +198,7 @@ profile.audio=Vlastní zvuk
 profile.audio.info=Nahrajte krátký zvuk pro vaše návštěvníky. Můžete nahrát cokoli - zvukové efekty, váš hlas nebo část vaší oblíbené skladby!
 profile.audio.delete=Smazat zvuk?
 profile.delete-account.success=Úspěch! Zkontrolujte prosím svou poštovní schránku a pozorně si přečtěte pokyny.
+profile.show-zodiac=Zobrazit znamení zvěrokruhu
 profile.ui-design=Design uživatelského rozhraní
 profile.ui-design.rounded=Zaoblené
 profile.ui-design.angular=Hranaté
