--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -56,7 +56,8 @@ logout=Abmelden
 
 message=Nachricht
 
-new-password=Neues Passwort
+new-password=Neues Passwort#
+no=Nein
 no-users-found=Keine Nutzer gefunden
 
 or=Oder
@@ -81,6 +82,8 @@ tos=Nutzungsbedingungen
 units=Einheiten
 
 website=Webseite
+
+yes=Ja
 
 # TEMPLATE #
 
@@ -187,6 +190,7 @@ profile.audio=Dein Audio
 profile.audio.info=Lade ein kurzes Audio für deine Besucher hoch. Du kannst alles hochladen - Soundeffekte, deine Stimme oder einen Teil deines Lieblingssongs! 
 profile.audio.delete=Audio löschen?
 profile.delete-account.success=Erfolg! Bitte prüfe Deine Mailbox und ließ Dir die Anweisungen sorgfältig durch.
+profile.show-zodiac=Sternzeichen anzeigen
 profile.ui-design=UI Design
 profile.ui-design.rounded=Abgerundet
 profile.ui-design.angular=Eckig
