--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -57,6 +57,7 @@ logout=Desconecta
 message=Mensaje
 
 new-password=Nueva contraseña
+no=No
 no-users-found=No se han encontrado usuarios
 
 or=O
@@ -81,6 +82,8 @@ tos=Condiciones de uso
 units=Unidades
 
 website=Página web
+
+yes=Sí
 
 # TEMPLATE #
 
@@ -185,6 +188,7 @@ profile.audio=Audio personalizado
 profile.audio.info=Sube un audio corto para tus visitantes. Puedes subir cualquier cosa: efectos de sonido, tu voz o parte de tu canción favorita.
 profile.audio.delete=¿Borrar el audio?
 profile.delete-account.success=¡Éxito! Por favor, compruebe su buzón y lea atentamente las instrucciones.
+profile.show-zodiac=Mostrar signos del zodiaco
 profile.ui-design=Diseño de la interfaz de usuario
 profile.ui-design.rounded=Redondeado
 profile.ui-design.angular=Angular
