--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -57,6 +57,7 @@ logout=Déconnexion
 message=Message
 
 new-password=Nouveau mot de passe
+no=Non
 no-users-found=Aucun utilisateur trouvé
 
 or=Ou
@@ -81,6 +82,8 @@ tos=Conditions d'utilisation
 units=Unités
 
 website=Site web
+
+yes=Oui
 
 # TEMPLATE #
 
@@ -185,6 +188,7 @@ profile.audio=Audio personnalisé
 profile.audio.info=Téléchargez une courte bande audio pour vos visiteurs. Vous pouvez télécharger n'importe quoi - des effets sonores, votre voix ou une partie de votre chanson préférée ! 
 profile.audio.delete=Effacer l'audio?
 profile.delete-account.success=Succès ! Veuillez vérifier votre boîte aux lettres et lire attentivement les instructions.
+profile.show-zodiac=Montrer les signes du zodiaque
 profile.ui-design=Conception de l'interface utilisateur
 profile.ui-design.rounded=Arrondi
 profile.ui-design.angular=Angulaire
