--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -57,6 +57,7 @@ logout=Disconnettiti
 message=Messaggio
 
 new-password=Nuova password
+no=No
 no-users-found=Nessun utente trovato
 
 or=Oppure
@@ -81,6 +82,8 @@ tos=Condizioni di utilizzo
 units=Unità
 
 website=Sito web
+
+yes=Sì
 
 # TEMPLATE #
 
@@ -185,6 +188,7 @@ profile.audio=Audio personalizzato
 profile.audio.info=Carica un breve audio per i tuoi visitatori. Potete caricare qualsiasi cosa - effetti sonori, la vostra voce o parte della vostra canzone preferita!
 profile.audio.delete=Eliminare l'audio?
 profile.delete-account.success=Successo! Controlla la tua casella di posta e leggi attentamente le istruzioni.
+profile.show-zodiac=Mostra i segni zodiacali
 profile.ui-design=Design UI
 profile.ui-design.rounded=Arrotondato
 profile.ui-design.angular=Angolare
