--- a/src/main/resources/i18n/messages_ja.properties
+++ b/src/main/resources/i18n/messages_ja.properties
@@ -57,6 +57,7 @@ logout=ログオフ
 message=メッセージ
 
 new-password=新しいパスワード
+no=いいえ
 no-users-found=ユーザーは見つかりませんでした。
 
 or=または
@@ -81,6 +82,8 @@ tos=ご利用条件
 units=単位
 
 website=ウェブサイト
+
+yes=はい
 
 # TEMPLATE #
 
@@ -185,6 +188,7 @@ profile.audio=カスタムオーディオ
 profile.audio.info=あなたの訪問者のための短いオーディオをアップロードします。あなたは何をアップロードすることができます - 効果音、あなたの声やお気に入りの曲の一部を
 profile.audio.delete=オーディオを削除する？
 profile.delete-account.success=成功! メールボックスをご確認の上、説明をよくお読みください。
+profile.show-zodiac=干支の表示
 profile.ui-design=UIデザイン
 profile.ui-design.rounded=丸型
 profile.ui-design.angular=アンギュラー
