--- a/src/main/resources/i18n/messages_ko.properties
+++ b/src/main/resources/i18n/messages_ko.properties
@@ -57,6 +57,7 @@ logout=로그 아웃
 message=메시지
 
 new-password=새 비밀번호
+no=아니요
 no-users-found=사용자가 없습니다.
 
 or=또는
@@ -81,6 +82,8 @@ tos=이용 약관
 units=단위
 
 website=웹 사이트
+
+yes=예
 
 # TEMPLATE #
 
@@ -185,6 +188,7 @@ profile.audio=커스텀 오디오
 profile.audio.info=방문자를 위해 짧은 오디오를 업로드하십시오. 음향 효과, 음성 또는 좋아하는 노래의 일부 등 무엇이든 업로드 할 수 있습니다!
 profile.audio.delete=오디오를 삭제 하시겠습니까?
 profile.delete-account.success=성공! 우편함을 확인하고 지침을주의 깊게 읽으십시오. 
+profile.show-zodiac=조디악 표지판 표시
 profile.ui-design=UI 디자인
 profile.ui-design.rounded=반올림 
 profile.ui-design.angular=모난
