--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -57,6 +57,7 @@ logout=Sair
 message=Mensagem
 
 new-password=Nova palavra-passe
+no=Não
 no-users-found=Nenhum utilizador encontrado
 
 or=Ou
@@ -81,6 +82,8 @@ tos=Termos de utilização
 units=Unidades
 
 website=Sítio Web
+
+yes=Sim
 
 # TEMPLATE #
 
@@ -185,6 +188,7 @@ profile.audio=Áudio personalizado
 profile.audio.info=Carregue um pequeno áudio para os seus visitantes. Pode carregar qualquer coisa - efeitos sonoros, a sua voz ou parte da sua canção favorita!
 profile.audio.delete=Apagar áudio?
 profile.delete-account.success=Sucesso! Por favor, verifique a sua caixa de correio e leia atentamente as instruções.
+profile.show-zodiac=Mostrar os signos do zodíaco
 profile.ui-design=Desenho UI
 profile.ui-design.rounded=Arredondado
 profile.ui-design.angular=Angular
