--- a/src/main/resources/i18n/messages_zh.properties
+++ b/src/main/resources/i18n/messages_zh.properties
@@ -57,6 +57,7 @@ logout=注销
 message=留言内容
 
 new-password=新密码
+no=没有
 no-users-found=没有发现用户
 
 or=或
@@ -81,6 +82,8 @@ tos=使用条款
 units=单位
 
 website=网站建设
+
+yes=是
 
 # TEMPLATE #
 
@@ -185,6 +188,7 @@ profile.audio=定制音频
 profile.audio.info=为您的访客上传一段简短的音频。您可以上传任何东西 - 音效，您的声音或您最喜欢的歌曲的一部分! 
 profile.audio.delete=删除音频？
 profile.delete-account.success=成功了！请检查您的邮箱并仔细阅读说明。
+profile.show-zodiac=显示十二生肖
 profile.ui-design=UI设计
 profile.ui-design.rounded=圆形的
 profile.ui-design.angular=角度
