--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -66,6 +66,7 @@ message=Message
 mi=mi
 
 new-password=New password
+no=No
 no-users-found=No users found
 
 or=Or
@@ -91,6 +92,8 @@ tos=Terms of Service
 units=Units
 
 website=Website
+
+yes=Yes
 
 # TEMPLATE #
 
@@ -180,7 +183,7 @@ password-change.warning=Your password needs to be at least 7 characters long and
 password-reset.title=Reset password
 
 profile.title=Profile
-profile.webpush=Receive Notifications
+profile.webpush=Receive notifications
 profile.intention=I want...
 profile.intention.meet=to meet new people
 profile.intention.date=a relationship
@@ -199,6 +202,7 @@ profile.audio=Custom audio
 profile.audio.info=Upload a short audio for your visitors. You can upload anything - sound effects, your voice or part of your favourite song! 
 profile.audio.delete=Delete audio?
 profile.delete-account.success=Success! Please check your mailbox and read the instructions carefully.
+profile.show-zodiac=Show zodiac signs
 profile.ui-design=UI design
 profile.ui-design.rounded=Rounded
 profile.ui-design.angular=Angular
