--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -57,6 +57,7 @@ logout=Выходить из системы
 message=Сообщение
 
 new-password=Новый пароль
+no=Нет
 no-users-found=Пользователи не найдены
 
 or=Или
@@ -81,6 +82,8 @@ tos=Условия использования
 units=Единицы
 
 website=Веб-сайт
+
+yes=Да
 
 # TEMPLATE #
 
@@ -185,6 +188,7 @@ profile.audio=Индивидуальный звук
 profile.audio.info=Загрузите короткий звук для ваших посетителей. Вы можете загрузить все, что угодно - звуковые эффекты, голос или часть любимой песни!
 profile.audio.delete=Удалить аудио?
 profile.delete-account.success=Успех! Пожалуйста, проверьте свой почтовый ящик и внимательно прочитайте инструкции.
+profile.show-zodiac=Показать знаки зодиака
 profile.ui-design=дизайн пользовательского интерфейса
 profile.ui-design.rounded=Округлый
 profile.ui-design.angular=Угловой
