Imprive bottom navigation bar

--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -70,7 +70,7 @@ profile=Perfil
 reports=Informes
 
 save=Guardar
-search=Busca en
+search=Buscar
 sign-up=Inscríbete
 source-code=El código fuente
 sort=Ordenar
@@ -169,7 +169,7 @@ password-change.warning=La contraseña debe tener al menos 7 caracteres y conten
 password-reset.title=restablecer la contraseña
 
 profile.title=Perfil
-profile.webpush=recibir notificaciones
+profile.webpush=Recibir notificaciones
 profile.intention=Me gustaría...
 profile.intention.meet=conocer gente nueva
 profile.intention.date=una relación romántica
@@ -212,7 +212,7 @@ register.oauth.google=Registrarse en Google
 register.oauth.facebook=Registrarse en Facebook
 register.referral-code=Código de referencia
 
-search.title=Busca en
+search.title=Buscar
 search.max-distance=La distancia máxima
 search.sort.filter.distance=La distancia más pequeña
 search.sort.filter.active=El último activo
