--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -15,7 +15,7 @@ error.format-not-supported=Le format n'est pas pris en charge.
 success.generic=Succès!
 
 accent-color=Couleur d'accent
-alerts=Avertissements
+alerts=Alertes
 
 cancel=Annuler
 captcha=Captcha
@@ -70,7 +70,7 @@ profile=Profil
 reports=Rapports
 
 save=Sauvez
-search=Recherchez
+search=Cherchez
 sign-up=S'inscrire
 source-code=Code source
 sort=Trier
