--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -27,7 +27,7 @@ dark=Темный
 default=По умолчанию
 description=Описание
 dob=Дата рождения
-donate=Пожертвования
+donate=Пожертвовать
 donated=Пожертвовано
 donations=Пожертвования
 
