Update TOS. Fix alert messages not showing messages correctly. Fixed several display issues.

--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -137,7 +137,7 @@ index.technology.title=Dernières technologies
 index.technology.description=Nous utilisons les dernières technologies afin que vous puissiez bénéficier des dernières technologies du web. Par exemple, vous pouvez installer ce site comme une <a href="https://wikipedia.org/wiki/Progressive_web_application">application web progressive</a> directement à partir de votre navigateur !
 index.for-you.title=Construit pour vous
 index.for-you.description=Grâce à des filtres modernes, nous ne vous montrons que les personnes qui correspondent à vos critères. Ainsi, vous passez moins de temps à chercher et plus de temps à rencontrer de nouvelles personnes.
-index.sign-up-now=Inscrivez-vous maintenant!
+index.sign-up-now=S'inscrire
 index.js.confirm-registration=Un courriel de confirmation a été envoyé à votre adresse électronique.
 index.js.registration-confirm-success=La confirmation a été un succès, vous pouvez maintenant vous connecter et rencontrer de nouvelles personnes dans votre région!
 index.js.registration-confirm-failed=La confirmation a échoué, veuillez réessayer!
