--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -52,7 +52,7 @@ last-active=Последний активный
 last-name=фамилия
 light=Яркий сайт
 login=Вход
-logout=Выходить из системы
+logout=Выход
 
 message=Сообщение
 
@@ -137,7 +137,7 @@ index.technology.title=Последние технологии
 index.technology.description=Мы используем новейшие технологии, чтобы вы могли воспользоваться преимуществами новейших веб-технологий. Например, вы можете установить эту страницу как <a href="https://wikipedia.org/wiki/Progressive_web_application">Прогрессивное веб-приложение</a> прямо из браузера!
 index.for-you.title=Создано для вас
 index.for-you.description=С современными фильтрами мы показываем только тех людей, которые соответствуют вашим критериям. Таким образом, вы тратите меньше времени на поиск и больше времени на знакомство с новыми людьми.
-index.sign-up-now=Зарегистрируйтесь сейчас!
+index.sign-up-now=Регистрируйте
 index.js.confirm-registration=На ваш электронный адрес было отправлено письмо-подтверждение.
 index.js.registration-confirm-success=Подтверждение прошло успешно, теперь вы можете войти в систему и познакомиться с новыми людьми в вашем районе!
 index.js.registration-confirm-failed=Подтверждение не подтвердилось, пожалуйста, попробуйте еще раз!
