--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -60,6 +60,7 @@ new-password=Nueva contraseña
 no=No
 no-users-found=No se han encontrado usuarios
 
+optional=opcional
 or=O
 
 password=Contraseña
