--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -60,6 +60,7 @@ new-password=Nouveau mot de passe
 no=Non
 no-users-found=Aucun utilisateur trouvé
 
+optional=optional
 or=Ou
 
 password=Mot de passe
