User can now delete their accounts immediately without waiting. Fix schedules.

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -55,7 +55,6 @@ km=km
 kofi=Ko-fi
 
 language=Language
-last-active=Last active
 last-name=Last name
 light=Light
 login=Login
@@ -312,7 +311,7 @@ backend.mail.password-reset.subject=Resetting your password
 backend.mail.password-reset.body=Hello {0}, <br> You have requested a password reset at {1}. Please visit the following link if you wish to reset your password: <a href="{2}/password/change/{3}">{2}/password/change/{3}</a>
 
 backend.mail.account-delete-request.subject=Deleting your account
-backend.mail.account-delete-request.body=Hello {0}, <br> You have requested to have your account deleted at {1}. Please visit the following link if you wish to delete your account permanently: <a href="{2}/delete-account/{3}">{2}/delete-account/{3}</a>. The link will be available in 24 hours and valid for 24 hours.
+backend.mail.account-delete-request.body=Hello {0}, <br> You have requested to have your account deleted at {1}. Please visit the following link if you wish to delete your account permanently: <a href="{2}/delete-account/{3}">{2}/delete-account/{3}</a>. The link will be valid for 24 hours.
 
 backend.mail.account-delete-confirm.subject=Account deletion
 backend.mail.account-delete-confirm.body=Hello {0}, <br> We have deleted your account at {1}. You can always create a new account if you change your mind. We hope to hear from you again :)
