--- a/src/main/resources/i18n/messages_cz.properties
+++ b/src/main/resources/i18n/messages_cz.properties
@@ -55,7 +55,6 @@ km=km
 kofi=Ko-fi
 
 language=Jazyk
-last-active=Poslední aktivní
 last-name=Příjmení
 light=Světlý
 login=Přihlášení
@@ -306,7 +305,7 @@ backend.mail.password-reset.subject=Obnovení hesla
 backend.mail.password-reset.body=Dobrý den, {0}, <br> o obnovení hesla jste požádali na adrese {1}. Chcete-li obnovit své heslo, navštivte následující odkaz: <a href="{2}/password/change/{3}">{2}/password/change/{3}</a>
 
 backend.mail.account-delete-request.subject=Mazání vašeho účtu
-backend.mail.account-delete-request.body=Dobrý den, {0}, <br> požádali jste o smazání svého účtu na {1}. Chcete-li svůj účet trvale smazat, navštivte následující odkaz: <a href="{2}/delete-account/{3}">{2}/delete-account/{3}</a>. Odkaz bude k dispozici do 24 hodin a bude platný 24 hodin.
+backend.mail.account-delete-request.body=Dobrý den, {0}, <br> požádali jste o smazání svého účtu na {1}. Chcete-li svůj účet trvale smazat, navštivte následující odkaz: <a href="{2}/delete-account/{3}">{2}/delete-account/{3}</a>. Odkaz bude platný 24 hodin.
 
 backend.mail.account-delete-confirm.subject=Smazání účtu
 backend.mail.account-delete-confirm.body=Dobrý den, {0}, <br> odstranili jsme váš účet na adrese {1}. Pokud si to rozmyslíte, můžete si vždy vytvořit nový účet. Doufáme, že se vám ozveme znovu :)
