--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -48,7 +48,6 @@ km=km
 kofi=Ko-fi
 
 language=Idioma
-last-active=El último activo
 last-name=Apellido
 light=Brillante
 login=Ingresa en
@@ -296,7 +295,7 @@ backend.mail.password-reset.subject=Restablecimiento de la contraseña
 backend.mail.password-reset.body=Hola {0}, <br> Ha solicitado un restablecimiento de su contraseña en {1}. Visite el siguiente enlace si desea restablecer su contraseña: <a href="{2}/password/change/{3}">{2}/password/change/{3}</a>
 
 backend.mail.account-delete-request.subject=Eliminación de su cuenta
-backend.mail.account-delete-request.body=Hola {0}, <br> Ha solicitado que se elimine su cuenta en {1}. Por favor, visite el siguiente enlace si desea eliminar su cuenta de forma permanente: <a href="{2}/delete-account/{3}">{2}/delete-account/{3}</a>. El enlace estará disponible en 24 horas y será válido durante 24 horas.
+backend.mail.account-delete-request.body=Hola {0}, <br> Ha solicitado que se elimine su cuenta en {1}. Por favor, visite el siguiente enlace si desea eliminar su cuenta de forma permanente: <a href="{2}/delete-account/{3}">{2}/delete-account/{3}</a>. El enlace será válido durante 24 horas.
 
 backend.mail.account-delete-confirm.subject=Eliminación de la cuenta
 backend.mail.account-delete-confirm.body=Hola {0}, <br> Hemos borrado su cuenta en {1}. Siempre puedes crear una nueva cuenta si cambias de opinión. Esperamos tener noticias suyas de nuevo :)
