--- a/src/main/resources/i18n/messages_ja.properties
+++ b/src/main/resources/i18n/messages_ja.properties
@@ -48,7 +48,6 @@ km=ｋｍ
 kofi=Ko-fi
 
 language=言語
-last-active=最後のアクティブ
 last-name=苗字
 light=明るい
 login=ログイン
@@ -296,7 +295,7 @@ backend.mail.password-reset.subject=パスワードをリセットする
 backend.mail.password-reset.body=こんにちは {0}, <br> あなたは{1}でパスワードの再設定を要求しました。パスワードを再設定したい場合は、以下のリンクを参照してください：<a href="{2}/password/change/{3}">{2}/password/change/{3}</a>
 
 backend.mail.account-delete-request.subject=アカウントの削除
-backend.mail.account-delete-request.body=こんにちは {0}、<br> {1} のアカウントの削除依頼をされていますね。アカウントを永久に削除したい場合は、以下のリンクを参照してください：<a href="{2}/delete-account/{3}">{2}/delete-account/{3}</a>。 このリンクは24時間以内に利用可能となり、24時間有効となります。
+backend.mail.account-delete-request.body=こんにちは {0}、<br> {1} のアカウントの削除依頼をされていますね。アカウントを永久に削除したい場合は、以下のリンクを参照してください：<a href="{2}/delete-account/{3}">{2}/delete-account/{3}</a>。リンクの有効期限は24時間です。
 
 backend.mail.account-delete-confirm.subject=アカウント削除
 backend.mail.account-delete-confirm.body=こんにちは {0}、<br> {1} のアカウントを削除しました。気が変わったらいつでも新しいアカウントを作ることができます。またのご連絡をお待ちしております :)
