--- a/src/main/resources/i18n/messages_ko.properties
+++ b/src/main/resources/i18n/messages_ko.properties
@@ -48,7 +48,6 @@ km=km
 kofi=Ko-fi
 
 language=언어
-last-active=마지막 활성
 last-name=성
 light=선명한
 login=로그인
@@ -296,7 +295,7 @@ backend.mail.password-reset.subject=새로운 경기
 backend.mail.password-reset.body={0} 님, 안녕하세요. <br> {1}에서 비밀번호 재설정을 요청하셨습니다. 비밀번호를 재설정하려면 다음 링크를 방문하십시오. <a href="{2}/password/change/{3}">{2}/password/change/{3}</a>
 
 backend.mail.account-delete-request.subject=계정 삭제
-backend.mail.account-delete-request.body={0} 님, 안녕하세요. <br> {1}에서 계정 삭제를 요청하셨습니다. 계정을 영구적으로 삭제하려면 다음 링크를 방문하십시오. <a href="{2}/delete-account/{3}">{2}/delete-account/{3}</a>. 링크는 24 시간 내에 사용할 수 있으며 24 시간 동안 유효합니다.
+backend.mail.account-delete-request.body={0} 님, 안녕하세요. <br> {1}에서 계정 삭제를 요청하셨습니다. 계정을 영구적으로 삭제하려면 다음 링크를 방문하십시오. <a href="{2}/delete-account/{3}">{2}/delete-account/{3}</a>. 링크는 24시간 동안 유효합니다.
 
 backend.mail.account-delete-confirm.subject=계정 삭제
 backend.mail.account-delete-confirm.body={0} 님, 안녕하세요. <br> {1}에서 귀하의 계정을 삭제했습니다. 마음이 바뀌면 언제든지 새 계정을 만들 수 있습니다. 다시 여러분의 의견을 기다리겠습니다. :)
