--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -48,7 +48,6 @@ km=км
 kofi=Ko-fi
 
 language=Язык
-last-active=Последний активный
 last-name=фамилия
 light=Яркий сайт
 login=Вход
@@ -296,7 +295,7 @@ backend.mail.password-reset.subject=Сброс вашего пароля
 backend.mail.password-reset.body=Здравствуйте {0}, <br> Вы запросили сброс своего пароля на {1}. Перейдите по следующей ссылке, если вы хотите сбросить свой пароль: <a href="{2}/password/change/{3}">{2}/password/change/{3}</a>
 
 backend.mail.account-delete-request.subject=Удаление аккаунта
-backend.mail.account-delete-request.body=Здравствуйте {0}, <br> Вы запросили удаление вашего аккаунта по адресу {1}. Пожалуйста, перейдите по следующей ссылке, если вы хотите навсегда удалить свой аккаунт: <a href="{2}/delete-account/{3}">{2}/delete-account/{3}</a>. Ссылка будет доступна в течение 24 часов и действительна в течение 24 часов.
+backend.mail.account-delete-request.body=Здравствуйте {0}, <br> Вы запросили удаление вашего аккаунта по адресу {1}. Пожалуйста, перейдите по следующей ссылке, если вы хотите навсегда удалить свой аккаунт: <a href="{2}/delete-account/{3}">{2}/delete-account/{3}</a>. Ссылка будет действительна в течение 24 часов.
 
 backend.mail.account-delete-confirm.subject=удаление аккаунта
 backend.mail.account-delete-confirm.body=Здравствуйте {0}, <br> Мы удалили ваш аккаунт по адресу {1}. Вы всегда можете создать новый аккаунт, если передумаете. Надеемся услышать от вас еще раз :)
