--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -48,7 +48,6 @@ km=km
 kofi=Ko-fi
 
 language=Sprache
-last-active=Zuletzt aktiv
 last-name=Nachname
 light=Hell
 login=Anmelden
@@ -298,7 +297,7 @@ backend.mail.password-reset.subject=Zurücksetzen deines Passworts
 backend.mail.password-reset.body=Hallo {0}, <br> Du hast eine Rücksetzung deines Passworts bei {1} beantragt. Besuche den folgenden Link, wenn du dein Passwort zurücksetzen möchtest: <a href="{2}/password/change/{3}">{2}/password/change/{3}</a>
 
 backend.mail.account-delete-request.subject=Deleting your account
-backend.mail.account-delete-request.body=Hallo {0}, <br> Du hast die Löschung Deines Kontos bei {1} beantragt. Bitte besuche den folgenden Link, wenn du dein Konto dauerhaft löschen lassen möchtest: <a href="{2}/delete-account/{3}">{2}/delete-account/{3}</a>. Der Link wird in 24 Stunden verfügbar und 24 Stunden lang gültig sein.
+backend.mail.account-delete-request.body=Hallo {0}, <br> Du hast die Löschung Deines Kontos bei {1} beantragt. Bitte besuche den folgenden Link, wenn du dein Konto dauerhaft löschen lassen möchtest: <a href="{2}/delete-account/{3}">{2}/delete-account/{3}</a>. Der Link wird 24 Stunden lang gültig sein.
 
 backend.mail.account-delete-confirm.subject=Kontolöschung
 backend.mail.account-delete-confirm.body=Hallo {0}, <br> Wir haben dein Konto bei {1} gelöscht. Du kannst jederzeit ein neues Konto erstellen, falls du deine Meinung änderst. Wir hoffen wieder von dir zu hören :)
