--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -48,7 +48,6 @@ km=km
 kofi=Ko-fi
 
 language=Langue
-last-active=Dernière activité
 last-name=Nom de famille
 light=Bright
 login=Connexion
@@ -296,7 +295,7 @@ backend.mail.password-reset.subject=Réinitialisation de votre mot de passe
 backend.mail.password-reset.body=Bonjour {0}, <br> Vous avez demandé une réinitialisation de votre mot de passe à {1}. Visitez le lien suivant si vous souhaitez réinitialiser votre mot de passe : <a href="{2}/password/change/{3}">{2}/password/change/{3}</a>
 
 backend.mail.account-delete-request.subject=Suppression de votre compte
-backend.mail.account-delete-request.body=Bonjour {0}, <br> Vous avez demandé la suppression de votre compte à {1}. Veuillez consulter le lien suivant si vous souhaitez supprimer votre compte de manière permanente : <a href="{2}/delete-account/{3}">{2}/delete-account/{3}</a>. Le lien sera disponible dans 24 heures et valable pendant 24 heures.
+backend.mail.account-delete-request.body=Bonjour {0}, <br> Vous avez demandé la suppression de votre compte à {1}. Veuillez consulter le lien suivant si vous souhaitez supprimer votre compte de manière permanente : <a href="{2}/delete-account/{3}">{2}/delete-account/{3}</a>. Le lien sera valable pendant 24 heures.
 
 backend.mail.account-delete-confirm.subject=Suppression de compte
 backend.mail.account-delete-confirm.body=Bonjour {0}, <br> Nous avons supprimé votre compte à {1}. Vous pouvez toujours créer un nouveau compte si vous changez d'avis. Nous espérons avoir de vos nouvelles :)
