--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -48,7 +48,6 @@ km=km
 kofi=Ko-fi
 
 language=Lingua
-last-active=Ultimo attivo
 last-name=Cognome
 light=Luminoso
 login=Accedi
@@ -296,7 +295,7 @@ backend.mail.password-reset.subject=Reimpostare la password
 backend.mail.password-reset.body=Ciao {0}, <br> Hai richiesto un reset della tua password a {1}. Visitate il seguente link se volete reimpostare la vostra password: <a href="{2}/password/change/{3}">{2}/password/change/{3}</a>
 
 backend.mail.account-delete-request.subject=Cancellare il tuo account
-backend.mail.account-delete-request.body=Ciao {0}, <br> Hai richiesto la cancellazione del tuo account a {1}. Si prega di visitare il seguente link se si desidera cancellare definitivamente il proprio account: <a href="{2}/delete-account/{3}">{2}/delete-account/{3}</a>. Il link sarà disponibile in 24 ore e valido per 24 ore.
+backend.mail.account-delete-request.body=Ciao {0}, <br> Hai richiesto la cancellazione del tuo account a {1}. Si prega di visitare il seguente link se si desidera cancellare definitivamente il proprio account: <a href="{2}/delete-account/{3}">{2}/delete-account/{3}</a>. Il link sarà valido per 24 ore.
 
 backend.mail.account-delete-confirm.subject=Cancellazione del conto
 backend.mail.account-delete-confirm.body=Hallo {0}, <br> Wir haben Ihr Konto bei {1} gelöscht. Wenn Sie Ihre Meinung ändern, können Sie jederzeit ein neues Konto erstellen. Wir hoffen, wieder von Ihnen zu hören :)
