--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -48,7 +48,6 @@ km=km
 kofi=Ko-fi
 
 language=Idioma
-last-active=Último activo
 last-name=Sobrenome
 light=Brilhante
 login=Entrar
@@ -296,7 +295,7 @@ backend.mail.password-reset.subject=Repor a sua palavra-passe
 backend.mail.password-reset.body=Olá {0}, <br> Pediu a redefinição da sua palavra-passe em {1}. Visite o seguinte link se quiser redefinir a sua palavra-passe: <a href="{2}/password/change/{3}">{2}/password/change/{3}</a>
 
 backend.mail.account-delete-request.subject=Apagar a sua conta
-backend.mail.account-delete-request.body=Olá {0}, <br> Pediu que a sua conta fosse apagada em {1}. Por favor, visite o seguinte link se desejar apagar a sua conta permanentemente: <a href="{2}/delete-account/{3}">{2}/delete-account/{3}</a>. A ligação estará disponível em 24 horas e será válida por 24 horas.
+backend.mail.account-delete-request.body=Olá {0}, <br> Pediu que a sua conta fosse apagada em {1}. Por favor, visite o seguinte link se desejar apagar a sua conta permanentemente: <a href="{2}/delete-account/{3}">{2}/delete-account/{3}</a>. A ligação será válida por 24 horas.
 
 backend.mail.account-delete-confirm.subject=Eliminação de conta
 backend.mail.account-delete-confirm.body=Olá {0}, <br> Apagámos a sua conta em {1}. Pode sempre criar uma nova conta se mudar de ideias. Esperamos ouvir de si novamente :)
