Initial support for user misc info

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -209,6 +209,22 @@ profile.ui-design.angular=Angular
 profile.referrer.info=Recommend Alovoa to a friend! Both of you will a get small but permanent visibility boost if a new account is created with this link:
 profile.referrer.amount=Number of referrals left:
 
+profile.misc-info.title=More Info
+profile.misc-info.drugs.title=Drugs
+profile.misc-info.relationship.title=Relationship Status
+profile.misc-info.kids.title=Children
+
+profile.misc-info.drugs.tobacco=Tobacco
+profile.misc-info.drugs.alcohol=Alcohol
+profile.misc-info.drugs.cannabis=Cannabis
+profile.misc-info.drugs.other=Other drugs
+profile.misc-info.relationship.single=Single
+profile.misc-info.relationship.taken=In a relationship
+profile.misc-info.relationship.open=Open relationship
+profile.misc-info.relationship.other=It's complicated
+profile.misc-info.kids.no=No Kids
+profile.misc-info.kids.yes=Has Kids
+
 profile.js.delete-image.confirm=Delete selected image?
 
 register.title=Register
