--- a/src/main/resources/i18n/messages_cz.properties
+++ b/src/main/resources/i18n/messages_cz.properties
@@ -205,6 +205,22 @@ profile.ui-design.angular=Hranaté
 profile.referrer.info=Doporučte Alovoa svým přátelům! Oba získáte malé, ale trvalé zvýšení viditelnosti, pokud bude vytvořen nový účet s tímto odkazem:
 profile.referrer.amount=Počet zbývajících doporučení:
 
+profile.misc-info.title=Další informace
+profile.misc-info.drugs.title=Drugs
+profile.misc-info.relationship.title=Stav vztahu
+profile.misc-info.kids.title=Děti
+
+profile.misc-info.drugs.tobacco=Tobacco
+profile.misc-info.drugs.alcohol=Alkohol
+profile.misc-info.drugs.cannabis=Cannabis
+profile.misc-info.drugs.other=Ostatní drogy
+profile.misc-info.relationship.single=Single
+profile.misc-info.relationship.taken=Ve vztahu
+profile.misc-info.relationship.open=Otevřený vztah
+profile.misc-info.relationship.other=Je to složité
+profile.misc-info.kids.no=Žádné děti
+profile.misc-info.kids.yes=Má děti
+
 profile.js.delete-image.confirm=Smazat vybraný obrázek?
 
 register.title=Registrovat
