--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -197,6 +197,22 @@ profile.ui-design.angular=Eckig
 profile.referrer.info=Alovoa einem Freund weiterempfehlen! Ihr beide erhaltet einen kleinen, aber permanenten Boost auf eure Sichtbarkeit, wenn ein neues Konto mit diesem Link erstellt wird:
 profile.referrer.amount=Anzahl der verbleibenden Empfehlungen:
 
+profile.misc-info.title=Weitere Infos
+profile.misc-info.drugs.title=Drogen
+profile.misc-info.relationship.title=Beziehungsstatus
+profile.misc-info.kids.title=Kinder
+
+profile.misc-info.drugs.tobacco=Tabak
+profile.misc-info.drugs.alcohol=Alkohol
+profile.misc-info.drugs.cannabis=Cannabis
+profile.misc-info.drugs.other=Andere Drogen
+profile.misc-info.relationship.single=Single
+profile.misc-info.relationship.taken=In einer Beziehung
+profile.misc-info.relationship.open=Offene Beziehung
+profile.misc-info.relationship.other=Es ist kompliziert
+profile.misc-info.kids.no=Keine Kinder
+profile.misc-info.kids.yes=Hat Kinder
+
 profile.js.delete-image.confirm=Ausgewähltes Bild löschen?
 
 register.title=Registrieren
