--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -195,6 +195,22 @@ profile.ui-design.angular=Angular
 profile.referrer.info=¡Recomienda Alovoa a un amigo! Ambos obtendrán un pequeño pero permanente impulso de visibilidad si se crea una nueva cuenta con este enlace:
 profile.referrer.amount=Número de remisiones que quedan:
 
+profile.misc-info.title=Más información
+profile.misc-info.drugs.title=Drogas
+profile.misc-info.relationship.title=Estado de la relación
+profile.misc-info.kids.title=Niños
+
+profile.misc-info.drugs.tobacco=Tabaco
+profile.misc-info.drugs.alcohol=Alcohol
+profile.misc-info.drugs.cannabis=Cannabis
+profile.misc-info.drugs.other=Otras drogas
+profile.misc-info.relationship.single=Soltero
+profile.misc-info.relationship.taken=En una relación
+profile.misc-info.relationship.open=Relación abierta
+profile.misc-info.relationship.other=Es complicado
+profile.misc-info.kids.no=Sin hijos
+profile.misc-info.kids.yes=Tiene hijos
+
 profile.js.delete-image.confirm=¿Borrar la imagen seleccionada?
 
 register.title=Registrarse
