--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -195,6 +195,22 @@ profile.ui-design.angular=Angulaire
 profile.referrer.info=Recommandez Alovoa à un ami ! Vous recevrez tous deux un petit coup de pouce de visibilité permanent si un nouveau compte est créé avec ce lien:
 profile.referrer.amount=Nombre de renvois restants:
 
+profile.misc-info.title=Plus d'infos
+profile.misc-info.drugs.title=Drogues
+profile.misc-info.relationship.title=Statut de la relation
+profile.misc-info.kids.title=Enfants
+
+profile.misc-info.drugs.tobacco=Tabac
+profile.misc-info.drugs.alcohol=Alcool
+profile.misc-info.drugs.cannabis=Cannabis
+profile.misc-info.drugs.other=Autres drogues
+profile.misc-info.relationship.single=Single
+profile.misc-info.relationship.taken=En couple
+profile.misc-info.relationship.open=Relation ouverte
+profile.misc-info.relationship.other=C'est compliqué
+profile.misc-info.kids.no=Pas d'enfants
+profile.misc-info.kids.yes=A des enfants
+
 profile.js.delete-image.confirm=Supprimer l'image sélectionnée?
 
 register.title=S'inscrire
