--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -195,6 +195,22 @@ profile.ui-design.angular=Angolare
 profile.referrer.info=Raccomanda Alovoa ad un amico! Entrambi otterrete un piccolo ma permanente aumento di visibilità se un nuovo account viene creato con questo link:
 profile.referrer.amount=Numero di rinvii rimasti:
 
+profile.misc-info.title=Maggiori informazioni
+profile.misc-info.drugs.title=Farmaci
+profile.misc-info.relationship.title=Stato della relazione
+profile.misc-info.kids.title=Bambini
+
+profile.misc-info.drugs.tobacco=Tabacco
+profile.misc-info.drugs.alcohol=Alcol
+profile.misc-info.drugs.cannabis=Cannabis
+profile.misc-info.drugs.other=Altre droghe
+profile.misc-info.relationship.single=Singolo
+profile.misc-info.relationship.taken=In una relazione
+profile.misc-info.relationship.open=Rapporto aperto
+profile.misc-info.relationship.other=È complicato
+profile.misc-info.kids.no=Nessun figlio
+profile.misc-info.kids.yes=Ha figli
+
 profile.js.delete-image.confirm=Cancellare l'immagine selezionata?
 
 register.title=Registrati
