--- a/src/main/resources/i18n/messages_ja.properties
+++ b/src/main/resources/i18n/messages_ja.properties
@@ -195,6 +195,22 @@ profile.ui-design.angular=アンギュラー
 profile.referrer.info=Alovoaを友達に勧めよう このリンクを使って新しいアカウントが作成されると、あなたとAlovoaの両方が、小さいながらも永続的に知名度を上げることができます:
 profile.referrer.amount=残りの紹介数:
 
+profile.misc-info.title=詳細はこちら
+profile.misc-info.drugs.title=ドラッグ
+profile.misc-info.relationship.title=交際ステータス
+profile.misc-info.kids.title=子どもたち
+
+profile.misc-info.drugs.tobacco=タバコ
+profile.misc-info.drugs.alcohol=アルコール
+profile.misc-info.drugs.cannabis=カンナビス（大麻
+profile.misc-info.drugs.other=その他の薬物
+profile.misc-info.relationship.single=シングル
+profile.misc-info.relationship.taken=付き合っている
+profile.misc-info.relationship.open=オープンな関係
+profile.misc-info.relationship.other=ややこしい
+profile.misc-info.kids.no=子供はいません。
+profile.misc-info.kids.yes=子供がいる
+
 profile.js.delete-image.confirm=選択した画像を削除しますか？
 
 register.title=登録
