--- a/src/main/resources/i18n/messages_ko.properties
+++ b/src/main/resources/i18n/messages_ko.properties
@@ -195,6 +195,22 @@ profile.ui-design.angular=모난
 profile.referrer.info=친구에게 알로보아를 추천해주세요! 이 링크를 사용하여 새 계정을 만들면 두 사람 모두 작지만 영구적인 가시성을 높일 수 있습니다:
 profile.referrer.amount=남은 추천 수:
 
+profile.misc-info.title=추가 정보
+profile.misc-info.drugs.title=약제
+profile.misc-info.relationship.title=관계 상태
+profile.misc-info.kids.title=어린이들
+
+profile.misc-info.drugs.tobacco=담배
+profile.misc-info.drugs.alcohol=알코올
+profile.misc-info.drugs.cannabis=대마초
+profile.misc-info.drug.other=기타 약품
+profile.misc-info.relationship.single=싱글
+profile.misc-info.relationship.taken=관계 중
+profile.misc-info.relationship.open=열린 관계
+profile.misc-info.relationship.other=복잡하다
+profile.misc-info.kids.no=키즈 없음
+profile.misc-info.kids.yes=자녀 있음
+
 profile.js.delete-image.confirm=선택한 사진을 삭제 하시겠습니까?
 
 register.title=등록하다
