--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -195,6 +195,22 @@ profile.ui-design.angular=Angular
 profile.referrer.info=Recomende Alovoa a um amigo! Ambos terão um pequeno mas permanente aumento de visibilidade se for criada uma nova conta com este link:
 profile.referrer.amount=Número de referências restantes:
 
+profile.misc-info.title=Mais Informações
+profile.misc-info.drugs.title=Drogas
+profile.misc-info.relationship.title=Relação
+profile.misc-info.kids.title=crianças
+
+profile.misc-info.drugs.tobacco=Tabaco
+profile.misc-info.drugs.alcohol=Álcool
+profile.misc-info.drugs.cannabis=Canábis
+profile.misc-info.drugs.other=Outros medicamentos
+profile.misc-info.relationship.single=Single
+profile.misc-info.relationship.taken=numa relação
+profile.misc-info.relationship.open=Relação aberta
+profile.misc-info.relationship.other=É complicado
+profile.misc-info.kids.no=Sem crianças
+profile.misc-info.kids.yes=Tem Filhos
+
 profile.js.delete-image.confirm=Apagar imagem seleccionada?
 
 register.title=Registar
