--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -195,6 +195,22 @@ profile.ui-design.angular=Угловой
 profile.referrer.info=Порекомендуйте Alovoa другу! Вы оба получите небольшой, но постоянный прирост видимости, если новый аккаунт будет создан по этой ссылке:
 profile.referrer.amount=Количество оставшихся рефералов:
 
+profile.misc-info.title=Большая информация
+profile.misc-info.drugs.title=Наркотики
+profile.misc-info.relationship.title=Статус отношений
+profile.misc-info.kids.title=дети
+
+profile.misc-info.drugs.tobacco=Табак
+profile.misc-info.drugs.alcohol=Алкоголь
+profile.misc-info.drugs.cannabis=Канабис
+profile.misc-info.drugs.other=Другие наркотики
+profile.misc-info.relationship.single=Одинокий
+profile.misc-info.relationship.taken=В отношениях
+profile.misc-info.relationship.open=Открытые отношения
+profile.misc-info.relationship.other=Сложные отношения
+profile.misc-info.children.no=Нет детей
+profile.misc-info.kids.yes=Есть дети
+
 profile.js.delete-image.confirm=Удалить выбранное изображение?
 
 register.title=Зарегистрироваться
