--- a/src/main/resources/i18n/messages_zh.properties
+++ b/src/main/resources/i18n/messages_zh.properties
@@ -195,6 +195,22 @@ profile.ui-design.angular=角度
 profile.referrer.info=推荐Alovoa给朋友! 如果用这个链接创建一个新的账户，你们两个人都将获得小但永久的知名度提升:
 profile.referrer.amount=剩下的转诊人数:
 
+profile.misc-info.title=更多信息
+profile.misc-info.drugs.title=药物
+profile.misc-info.relationship.title=关系状态
+profile.misc-info.children.title=儿童
+
+profile.misc-info.drugs.tobacco=烟草
+profile.misc-info.drugs.alcohol=酒精
+profile.misc-info.drugs.cannabis=大麻
+profile.misc-info.drugs.other=其他毒品
+profile.misc-info.relationship.single=单身
+profile.misc-info.relationship.taken=正在恋爱中
+profile.misc-info.relationship.open=开放式关系
+profile.misc-info.relationship.other=关系很复杂
+profile.misc-info.kids.no=没有孩子
+profile.misc-info.kids.yes=有孩子
+
 profile.js.delete-image.confirm=删除所选图像？
 
 register.title=注册
