--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -227,11 +227,10 @@ profile.misc-info.kids.yes=Has Kids
 
 profile.js.delete-image.confirm=Delete selected image?
 
-profile-onboarding.profile-picture=Upload a picture of you
-profile-onboarding.description=Tell others something about you
-profile-onboarding.intention=What are you looking for?
-profile-onboarding.preferred-genders=Who are you looking for?
-profile-onboarding.interests=Tell others what interests you have
+profile-onboarding.profile-picture=I look like this
+profile-onboarding.description=Something about myself
+profile-onboarding.description.placeholder=I really love ice cream!
+profile-onboarding.interests=I really like these things...
 
 register.title=Register
 register.subtitle=Create a new account
