--- a/src/main/resources/i18n/messages_cz.properties
+++ b/src/main/resources/i18n/messages_cz.properties
@@ -223,6 +223,11 @@ profile.misc-info.kids.yes=Má děti
 
 profile.js.delete-image.confirm=Smazat vybraný obrázek?
 
+profile-onboarding.profile-picture=Vypadám takto
+profile-onboarding.description=Něco o sobě
+profile-onboarding.description.placeholder=Mám opravdu rád zmrzlinu!
+profile-onboarding.interests=Mám opravdu rád tyto věci...
+
 register.title=Registrovat
 register.subtitle=Vytvořit nový účet
 #register.warning=password-change.warning
