--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -215,6 +215,11 @@ profile.misc-info.kids.yes=Hat Kinder
 
 profile.js.delete-image.confirm=Ausgewähltes Bild löschen?
 
+profile-onboarding.profile-picture=So sehe ich aus
+profile-onboarding.description=Etwas über mich
+profile-onboarding.description.placeholder=Ich liebe Eiscreme!
+profile-onboarding.interests=Ich mag diese Dinge wirklich gerne...
+
 register.title=Registrieren
 register.subtitle=Neues Konto erstellen
 #register.warning=password-change.warning
