--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -213,6 +213,11 @@ profile.misc-info.kids.yes=Tiene hijos
 
 profile.js.delete-image.confirm=¿Borrar la imagen seleccionada?
 
+profile-onboarding.profile-picture=Tengo este aspecto
+profile-onboarding.description=Algo sobre mí
+profile-onboarding.description.placeholder=¡Me encanta el helado!
+profile-onboarding.interests=Me gustan mucho estas cosas...
+
 register.title=Registrarse
 register.subtitle=Crear una nueva cuenta
 #register.warning=password-change.warning
