--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -213,6 +213,11 @@ profile.misc-info.kids.yes=A des enfants
 
 profile.js.delete-image.confirm=Supprimer l'image sélectionnée?
 
+profile-onboarding.profile-picture=Je ressemble à ça
+profile-onboarding.description=Quelque chose à mon sujet
+profile-onboarding.description.placeholder=J'aime vraiment la crème glacée !
+profile-onboarding.interests=J'aime vraiment ces choses...
+
 register.title=S'inscrire
 register.subtitle=Créer un nouveau compte
 #register.warning=password-change.warning
