--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -213,6 +213,11 @@ profile.misc-info.kids.yes=Ha figli
 
 profile.js.delete-image.confirm=Cancellare l'immagine selezionata?
 
+profile-onboarding.profile-picture=Ho questo aspetto
+profile-onboarding.description=Qualcosa su di me
+profile-onboarding.description.placeholder=Mi piace molto il gelato!
+profile-onboarding.interests=Mi piacciono molto queste cose...
+
 register.title=Registrati
 register.subtitle=Creare un nuovo account
 #register.warning=password-change.warning
