--- a/src/main/resources/i18n/messages_ja.properties
+++ b/src/main/resources/i18n/messages_ja.properties
@@ -213,6 +213,11 @@ profile.misc-info.kids.yes=子供がいる
 
 profile.js.delete-image.confirm=選択した画像を削除しますか？
 
+profile-onboarding.profile-picture=私はこのような顔をしています。
+profile-onboarding.description=自分自身についての説明
+profile-onboarding.description.placeholder=私は本当にアイスクリームが大好きです
+profile-onboarding.interests=私は本当にこれらのものが好きです...
+
 register.title=登録
 register.subtitle=新規アカウントの作成
 #register.warning=password-change.warning
