--- a/src/main/resources/i18n/messages_ko.properties
+++ b/src/main/resources/i18n/messages_ko.properties
@@ -213,6 +213,11 @@ profile.misc-info.kids.yes=자녀 있음
 
 profile.js.delete-image.confirm=선택한 사진을 삭제 하시겠습니까?
 
+profile-onboarding.profile-picture=이렇게 생겼어요
+profile-onboarding.description=나 자신에 대한 것
+profile-onboarding.description.placeholder=저는 아이스크림을 정말 좋아합니다!
+profile-onboarding.interests=나는 이것들을 정말 좋아합니다...
+
 register.title=등록하다
 register.subtitle=새로운 계정을 생성 
 #register.warning=password-change.warning
