--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -213,6 +213,11 @@ profile.misc-info.kids.yes=Tem Filhos
 
 profile.js.delete-image.confirm=Apagar imagem seleccionada?
 
+profile-onboarding.profile-picture=Fico assim
+profile-onboarding.description=Algo sobre mim
+profile-onboarding.description.placeholder=Eu realmente adoro gelados!
+profile-onboarding.interests=Eu gosto mesmo destas coisas...
+
 register.title=Registar
 register.subtitle=Criar nova conta
 #register.warning=password-change.warning
