--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -213,6 +213,11 @@ profile.misc-info.kids.yes=Есть дети
 
 profile.js.delete-image.confirm=Удалить выбранное изображение?
 
+profile-onboarding.profile-picture=Я выгляжу вот так
+profile-onboarding.description=Нечто о себе
+profile-onboarding.description.placeholder=Я очень люблю мороженое!
+profile-onboarding.interests=Мне очень нравятся эти вещи...
+
 register.title=Зарегистрироваться
 register.subtitle=Создать новую учетную запись
 #register.warning=password-change.warning
