--- a/src/main/resources/i18n/messages_zh.properties
+++ b/src/main/resources/i18n/messages_zh.properties
@@ -213,6 +213,11 @@ profile.misc-info.kids.yes=有孩子
 
 profile.js.delete-image.confirm=删除所选图像？
 
+profile-onboarding.profile-picture=我看起来是这样的
+profile-onboarding.description=关于我自己的一些情况
+profile-onboarding.description.placeholder=我真的很喜欢吃冰淇淋!
+profile-onboarding.interests=我真的很喜欢这些东西...
+
 register.title=注册
 register.subtitle=创建新账户
 #register.warning=密码-change.warning
