Replace alert() with custom function. Put long texts from profile inside a button that displays the text in a popup.

--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -182,7 +182,7 @@ profile.max-age=Max. Alter
 profile.gender=Ich suche nach...
 profile.gender.male=Mann
 profile.gender.female=Frau
-profile.gender.other=Andere
+profile.gender.other=Divers
 profile.userdata.request=Nutzerdaten anfordern
 profile.account.delete=Konto löschen
 profile.interest.info=Nur Zeichen, Ziffern und Minus (-) erlaubt. Muss zwischen 3 und 30 Zeichen lang sein. Maximal 5 Interessen.
