Adjust password-change and password-reset pages

--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -55,7 +55,7 @@ logout=Abmelden
 
 message=Nachricht
 
-new-password=Neues Passwort#
+new-password=Neues Passwort
 no=Nein
 no-users-found=Keine Nutzer gefunden
 
