--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -116,6 +116,9 @@ profile.warning.no-gender-preference=No gender preference found!
 profile.warning.no-location=No location found! It will be set automatically when you search for other users!
 profile.warning.intention.limit=Intention changed. You cannot change it for another 24 hours.
 
+profile.button.like=Like
+profile.button.dislike=Dislike
+
 delete-account.title=Delete account
 delete-account.confirm=I hereby confirm to delete this account permanently.
 delete-account.not-active=Link is not active yet. Please check the instructions we have sent you or send another account deletion request.
